--- a/src/shared/lib/infusion/lib/jquery/ui/css/fl-theme-lgdg/lgdg.css
+++ b/src/shared/lib/infusion/lib/jquery/ui/css/fl-theme-lgdg/lgdg.css
@@ -1,7 +1,7 @@
 /*! jQuery UI - v1.10.3 - 2013-07-22
 * http://jqueryui.com
 * Includes: jquery.ui.core.css, jquery.ui.resizable.css, jquery.ui.selectable.css, jquery.ui.accordion.css, jquery.ui.autocomplete.css, jquery.ui.button.css, jquery.ui.datepicker.css, jquery.ui.dialog.css, jquery.ui.menu.css, jquery.ui.progressbar.css, jquery.ui.slider.css, jquery.ui.spinner.css, jquery.ui.tabs.css, jquery.ui.tooltip.css
-* To view and modify this theme, visit http://jqueryui.com/themeroller/?ffDefault=Verdana%2CArial%2Csans-serif&fwDefault=normal&fsDefault=1.1em&cornerRadius=4px&bgColorHeader=%23343434&bgTextureHeader=flat&bgImgOpacityHeader=100&borderColorHeader=%23bdbdbb&fcHeader=%23bdbdbb&iconColorHeader=%23bdbdbb&bgColorContent=%23343434&bgTextureContent=flat&bgImgOpacityContent=100&borderColorContent=%23bdbdbb&fcContent=%23bdbdbb&iconColorContent=%23bdbdbb&bgColorDefault=%23343434&bgTextureDefault=flat&bgImgOpacityDefault=100&borderColorDefault=%23bdbdbb&fcDefault=%23bdbdbb&iconColorDefault=%23bdbdbb&bgColorHover=%23bdbdbb&bgTextureHover=flat&bgImgOpacityHover=100&borderColorHover=%23343434&fcHover=%23343434&iconColorHover=%23343434&bgColorActive=%23bdbdbb&bgTextureActive=flat&bgImgOpacityActive=100&borderColorActive=%23343434&fcActive=%23343434&iconColorActive=%23343434&bgColorHighlight=%23343434&bgTextureHighlight=flat&bgImgOpacityHighlight=100&borderColorHighlight=%23bdbdbb&fcHighlight=%23bdbdbb&iconColorHighlight=%23bdbdbb&bgColorError=%23343434&bgTextureError=flat&bgImgOpacityError=100&borderColorError=%23bdbdbb&fcError=%23bdbdbb&iconColorError=%23bdbdbb&bgColorOverlay=%23343434&bgTextureOverlay=flat&bgImgOpacityOverlay=0&opacityOverlay=30&bgColorShadow=%23343434&bgTextureShadow=flat&bgImgOpacityShadow=0&opacityShadow=30&thicknessShadow=8px&offsetTopShadow=-8px&offsetLeftShadow=-8px&cornerRadiusShadow=8px
+* To view and modify this theme, visit http://jqueryui.com/themeroller/?ffDefault=Verdana%2CArial%2Csans-serif&fwDefault=normal&fsDefault=1.1em&cornerRadius=4px&bgColorHeader=%23555&bgTextureHeader=flat&bgImgOpacityHeader=100&borderColorHeader=%23bdbdbb&fcHeader=%23bdbdbb&iconColorHeader=%23bdbdbb&bgColorContent=%23555&bgTextureContent=flat&bgImgOpacityContent=100&borderColorContent=%23bdbdbb&fcContent=%23bdbdbb&iconColorContent=%23bdbdbb&bgColorDefault=%23555&bgTextureDefault=flat&bgImgOpacityDefault=100&borderColorDefault=%23bdbdbb&fcDefault=%23bdbdbb&iconColorDefault=%23bdbdbb&bgColorHover=%23bdbdbb&bgTextureHover=flat&bgImgOpacityHover=100&borderColorHover=%23555&fcHover=%23555&iconColorHover=%23555&bgColorActive=%23bdbdbb&bgTextureActive=flat&bgImgOpacityActive=100&borderColorActive=%23555&fcActive=%23555&iconColorActive=%23555&bgColorHighlight=%23555&bgTextureHighlight=flat&bgImgOpacityHighlight=100&borderColorHighlight=%23bdbdbb&fcHighlight=%23bdbdbb&iconColorHighlight=%23bdbdbb&bgColorError=%23555&bgTextureError=flat&bgImgOpacityError=100&borderColorError=%23bdbdbb&fcError=%23bdbdbb&iconColorError=%23bdbdbb&bgColorOverlay=%23555&bgTextureOverlay=flat&bgImgOpacityOverlay=0&opacityOverlay=30&bgColorShadow=%23555&bgTextureShadow=flat&bgImgOpacityShadow=0&opacityShadow=30&thicknessShadow=8px&offsetTopShadow=-8px&offsetLeftShadow=-8px&cornerRadiusShadow=8px
 * Copyright 2013 jQuery Foundation and other contributors Licensed MIT */
 
 /* Layout helpers
@@ -801,7 +801,7 @@ body.fl-theme-lgdg .ui-tooltip {
 }
 .fl-theme-lgdg .ui-widget-content {
 	border: 1px solid #bdbdbb;
-	background: #343434 url(images/ui-bg_flat_100_343434_40x100.png) 50% 50% repeat-x;
+	background: #555555 url(images/ui-bg_flat_100_555_40x100.png) 50% 50% repeat-x;
 	color: #bdbdbb;
 }
 .fl-theme-lgdg .ui-widget-content a {
@@ -809,7 +809,7 @@ body.fl-theme-lgdg .ui-tooltip {
 }
 .fl-theme-lgdg .ui-widget-header {
 	border: 1px solid #bdbdbb;
-	background: #343434 url(images/ui-bg_flat_100_343434_40x100.png) 50% 50% repeat-x;
+	background: #555555 url(images/ui-bg_flat_100_555_40x100.png) 50% 50% repeat-x;
 	color: #bdbdbb;
 	font-weight: bold;
 }
@@ -823,7 +823,7 @@ body.fl-theme-lgdg .ui-tooltip {
 .fl-theme-lgdg .ui-widget-content .ui-state-default,
 .fl-theme-lgdg .ui-widget-header .ui-state-default {
 	border: 1px solid #bdbdbb;
-	background: #343434 url(images/ui-bg_flat_100_343434_40x100.png) 50% 50% repeat-x;
+	background: #555555 url(images/ui-bg_flat_100_555_40x100.png) 50% 50% repeat-x;
 	font-weight: normal;
 	color: #bdbdbb;
 }
@@ -839,30 +839,30 @@ body.fl-theme-lgdg .ui-tooltip {
 .fl-theme-lgdg .ui-state-focus,
 .fl-theme-lgdg .ui-widget-content .ui-state-focus,
 .fl-theme-lgdg .ui-widget-header .ui-state-focus {
-	border: 1px solid #343434;
+	border: 1px solid #555555;
 	background: #bdbdbb url(images/ui-bg_flat_100_bdbdbb_40x100.png) 50% 50% repeat-x;
 	font-weight: normal;
-	color: #343434;
+	color: #555555;
 }
 .fl-theme-lgdg .ui-state-hover a,
 .fl-theme-lgdg .ui-state-hover a:hover,
 .fl-theme-lgdg .ui-state-hover a:link,
 .fl-theme-lgdg .ui-state-hover a:visited {
-	color: #343434;
+	color: #555555;
 	text-decoration: none;
 }
 .fl-theme-lgdg .ui-state-active,
 .fl-theme-lgdg .ui-widget-content .ui-state-active,
 .fl-theme-lgdg .ui-widget-header .ui-state-active {
-	border: 1px solid #343434;
+	border: 1px solid #555555;
 	background: #bdbdbb url(images/ui-bg_flat_100_bdbdbb_40x100.png) 50% 50% repeat-x;
 	font-weight: normal;
-	color: #343434;
+	color: #555555;
 }
 .fl-theme-lgdg .ui-state-active a,
 .fl-theme-lgdg .ui-state-active a:link,
 .fl-theme-lgdg .ui-state-active a:visited {
-	color: #343434;
+	color: #555555;
 	text-decoration: none;
 }
 
@@ -872,7 +872,7 @@ body.fl-theme-lgdg .ui-tooltip {
 .fl-theme-lgdg .ui-widget-content .ui-state-highlight,
 .fl-theme-lgdg .ui-widget-header .ui-state-highlight {
 	border: 1px solid #bdbdbb;
-	background: #343434 url(images/ui-bg_flat_100_343434_40x100.png) 50% 50% repeat-x;
+	background: #555555 url(images/ui-bg_flat_100_555_40x100.png) 50% 50% repeat-x;
 	color: #bdbdbb;
 }
 .fl-theme-lgdg .ui-state-highlight a,
@@ -884,7 +884,7 @@ body.fl-theme-lgdg .ui-tooltip {
 .fl-theme-lgdg .ui-widget-content .ui-state-error,
 .fl-theme-lgdg .ui-widget-header .ui-state-error {
 	border: 1px solid #bdbdbb;
-	background: #343434 url(images/ui-bg_flat_100_343434_40x100.png) 50% 50% repeat-x;
+	background: #555555 url(images/ui-bg_flat_100_555_40x100.png) 50% 50% repeat-x;
 	color: #bdbdbb;
 }
 .fl-theme-lgdg .ui-state-error a,
@@ -940,10 +940,10 @@ body.fl-theme-lgdg .ui-tooltip {
 }
 .fl-theme-lgdg .ui-state-hover .ui-icon,
 .fl-theme-lgdg .ui-state-focus .ui-icon {
-	background-image: url(images/ui-icons_343434_256x240.png);
+	background-image: url(images/ui-icons_555_256x240.png);
 }
 .fl-theme-lgdg .ui-state-active .ui-icon {
-	background-image: url(images/ui-icons_343434_256x240.png);
+	background-image: url(images/ui-icons_555_256x240.png);
 }
 .fl-theme-lgdg .ui-state-highlight .ui-icon {
 	background-image: url(images/ui-icons_bdbdbb_256x240.png);
@@ -1163,14 +1163,14 @@ body.fl-theme-lgdg .ui-tooltip {
 
 /* Overlays */
 .fl-theme-lgdg .ui-widget-overlay {
-	background: #343434 url(images/ui-bg_flat_0_343434_40x100.png) 50% 50% repeat-x;
+	background: #555555 url(images/ui-bg_flat_0_555_40x100.png) 50% 50% repeat-x;
 	opacity: .3;
 	filter: Alpha(Opacity=30);
 }
 .fl-theme-lgdg .ui-widget-shadow {
 	margin: -8px 0 0 -8px;
 	padding: 8px;
-	background: #343434 url(images/ui-bg_flat_0_343434_40x100.png) 50% 50% repeat-x;
+	background: #555555 url(images/ui-bg_flat_0_555_40x100.png) 50% 50% repeat-x;
 	opacity: .3;
 	filter: Alpha(Opacity=30);
 	border-radius: 8px;
