--- a/demos/discoveryTool/demo.css
+++ b/demos/discoveryTool/demo.css
@@ -289,6 +289,12 @@ article h2 {
 }
 
 /* Images */
+details {
+    padding-bottom: 1em;
+    display: block;
+    display: none;
+}
+
 div[role="img"] {
     background-repeat: no-repeat;
     background-size: contain; 
