GPII-150: Tweak focus styling on prefs

--- a/src/discoveryTool/css/DiscoveryTool.css
+++ b/src/discoveryTool/css/DiscoveryTool.css
@@ -259,3 +259,8 @@
     top: -0.9em;    
 }
 
+.fl-theme-bw .fl-uiOptions input:focus + label,  
+.fl-theme-lgdg .fl-uiOptions input:focus + label {
+    outline: none;
+    border: 0.2em solid #00AAFF;
+}
