--- a/src/discoveryTool/css/DiscoveryTool.css
+++ b/src/discoveryTool/css/DiscoveryTool.css
@@ -127,15 +127,15 @@
     font-family: 'DiscoveryToolIcons';
 }
 
-.icon-discover:before {
+.fl-icon-discover:before {
     color: #fff;
     content: "\e01a";
 }
 
-.icon-discover:after {
+.fl-icon-discover:after {
     content: "\e01b";
     position: relative;
-    left: -1.2em;
+    left: 15em;
 }
 
 .fl-icon-arrow:after {
