GPII-130: Moved the font icon styling for "show/hide" from DiscoveryTool.css to demo.css.

--- a/demos/discoveryTool/demo.css
+++ b/demos/discoveryTool/demo.css
@@ -288,6 +288,17 @@ article h2 {
 	content: "\e008";
 }
 
+.fl-icon-discover:before {
+    color: #fff;
+    content: "\e01a";
+}
+
+.fl-icon-discover:after {
+    content: "\e01b";
+    position: relative;
+    left: 15em;
+}
+
 /* Images */
 details {
     padding-bottom: 1em;
