GPII-153: All classes added

--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -2,7 +2,7 @@
     display: none;
 }
 
-.speech-rate {
+#speech-rate {
 	display: none;
 }
 
@@ -18,8 +18,6 @@
 #expanded-bottom {
 	display: none;
 }
-
-#expand-button {}
 
 .onoffswitch {
     position: relative; width: 90px;
