--- a/src/discoveryTool/css/DiscoveryTool.css
+++ b/src/discoveryTool/css/DiscoveryTool.css
@@ -118,7 +118,7 @@
 }
 
 /* Font Icons */
-.fl-icon-discover, .fl-icon-arrow, .fl-icon-check {
+.fl-icon-arrow, .fl-icon-check {
     font-family: 'DiscoveryToolIcons';
 }
 
@@ -223,8 +223,8 @@
 
 /* Theming for high and low contrast */
 
-.fl-theme-bw .fl-icon-discover, .fl-theme-bw .fl-icon-arrow, .fl-theme-bw .fl-icon-check, .fl-theme-bw .fl-discoveryTool-panel-icon,
-.fl-theme-lgdg .fl-icon-discover, .fl-theme-lgdg .fl-icon-arrow, .fl-theme-lgdg .fl-icon-check, .fl-theme-lgdg .fl-discoveryTool-panel-icon {
+.fl-theme-bw .fl-icon-arrow, .fl-theme-bw .fl-icon-check, .fl-theme-bw .fl-discoveryTool-panel-icon,
+.fl-theme-lgdg .fl-icon-arrow, .fl-theme-lgdg .fl-icon-check, .fl-theme-lgdg .fl-discoveryTool-panel-icon {
     font-family: 'DiscoveryToolIcons' !important;
 }
 
