--- a/src/discoveryTool/css/DiscoveryTool.css
+++ b/src/discoveryTool/css/DiscoveryTool.css
@@ -101,20 +101,19 @@
     display: inline-block;
     position:relative;
     top: -0.6em;
+    vertical-align: middle;
 }
 
 .fl-uiOptions-discoveryTool .fl-uiOptions-panel input:checked + label div.fl-icon-check {
     visibility: visible;
-    animation: checkshrink 2s linear;
-    -webkit-animation: checkshrink 2s linear; /* Safari and Chrome */    
+    animation: checkshrink 1s linear;
+    -webkit-animation: checkshrink 1s linear; /* Safari and Chrome */    
 }
 
 /* Checkbox animation */
 @keyframes checkshrink {
-    0%  { height: 2em; width: 2em; margin-left: 4.3em; opacity: 50%; }
-    33% { height: 1.7em; width: 1.7em; margin-left: 4.4em; opacity: 70%; }
-    66% { height: 1.4em; width: 1.4em; margin-left: 4.5em; opacity: 90%; }
-    100%{ height: 1.1em; width: 1.1em; margin-left: 4.6em; opacity: 100%; }        
+    from { height: 2em;   width: 2em;   margin-left: 4.0em; top: -1.2em; background-color: rgb(54, 60, 64, 0); opacity: 0; }
+    to { height: 1.1em; width: 1.1em; margin-left: 4.6em; top: -0.6em; background-color: rgb(54, 60, 64, 1); opacity: 1; }        
 }
 
 @-webkit-keyframes checkshrink { /* Safari and Chrome */
