--- a/demos/discoveryTool/demo.css
+++ b/demos/discoveryTool/demo.css
@@ -263,6 +263,9 @@ article h2 {
 .fl-header-title {
 	font-size: 1.2em;
     font-weight: bold;
+    position: relative;
+    top: -0.25em;    
+    color: green;
 }
 
 /* Font Icons */
