Removed the CSS needed when using hacked fat-panel version of UIOptions.

--- a/demos/pmt/demo.css
+++ b/demos/pmt/demo.css
@@ -1,7 +1,8 @@
+/*	CSS needed when using hacked fat-panel version of UIOptions 
 .flc-iframe	{
 	display: block !important;
 }
 
 body, #myUIOptions, .flc-uiOptions-iframe, .flc-iframe {
 	height: 100% !important;
-}
+} */
