GPII-162: Focus styling for demo content and panel bar

--- a/demos/discoveryTool/demo.css
+++ b/demos/discoveryTool/demo.css
@@ -31,7 +31,7 @@ a {
 a:hover {
     text-decoration: underline;
 }
-a:focus, button:focus {
+a:focus {
     color: #2795B6;
     outline: 2px solid #2795B6;    
 }
